working playback with exe

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -5,7 +5,7 @@
 
     <TextView
         android:id="@+id/title_textview"
-        android:layout_marginTop="10dip"
+        android:layout_margin="10dip"
         android:textStyle="bold"
         android:textColor="@color/colorGreen"
         android:layout_width="match_parent"
@@ -13,7 +13,13 @@
         android:text="@string/basic_playback"
         android:textSize="15sp"/>
 
-    
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
+
+
 
 
 
