--- a/app/src/main/res/layout/recyclerview_item_row.xml
+++ b/app/src/main/res/layout/recyclerview_item_row.xml
@@ -5,10 +5,16 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/tv_animal_type"
+        android:id="@+id/content_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:padding="20dp"/>
+        android:textSize="15sp"
+        android:padding="10dp"/>
+
+    <ImageView
+        android:id="@+id/content_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
